[package]
name = "rpi-hwctl"
version = "0.1.0"
authors = ["Volker Kempert <volker.kempert@almedso.de>"]
edition = "2018"
license = "MIT"  # see LICENSE.md


[features]
default = ["unproven"]
# we need this for reading from port expander pcf857x
unproven = []

[dependencies]
# to offer a REST service endpoint
actix-web = "2.0.0"
actix-rt = "1.0"
failure = "0.1.8"
log = "0.4.0"
env_logger = "0.7.1"

# Access the hardware
[target.'cfg(unix)'.dependencies]
linux-embedded-hal = "0.3.0"
embedded-graphics = "0.6.2"
bme280 = "0.2.1"  # part of Explorer 700 shield
i2cdev-bmp180 = "0.1.0"  # part of Explorer 700 shield

ssd1306 = "0.3.1"  # part of Explorer 700 shield
si7021 = "0.2.0"  # external temp and humidity sensor
pcf857x = { version = "0.4.0", features = [ "unproven"] }  # i2c port expander part of Explorer 700 shield
i2cdev = "0.4.1"
i2csensors = "0.1.3"
port-expander = "0.2.1"
shared-bus = "0.2.2"
nix = "0.17.0"  # for getting ip address
bmp085 = "0.1.2"

[dev-dependencies]



