[package]
name = "rpi-hwctl"
version = "0.1.0"
authors = ["Volker Kempert <volker.kempert@almedso.de>"]
edition = "2018"
license = "MIT"  # see LICENSE.md

[dependencies]
# to offer a REST service endpoint
actix-web = "4.0.0-beta.9"
tokio = {version = "1.9.0", features = ["full"]}
#failure = "0.1.8"
log = "0.4"
env_logger = "0.9"

[dev-dependencies]
explorer700 = { path = "explorer700" }  # Raspi shield
embedded-multi-page-hmi = { path = "../embedded-multi-page-hmi" } # "0.3.1"
futures = "0.3"
futures-timer = "3.0"
chrono = "0.4.19"
embedded-graphics = "0.6.2"
