[package]
name = "rpi-hwctl"
version = "0.1.0"
authors = ["Volker Kempert <volker.kempert@almedso.de>"]
edition = "2018"
license = "MIT"  # see LICENSE.md


[dependencies]
# to offer a REST service endpoint
actix-web = "4.3.1"
tokio = {version = "1.9.0", features = ["full"]}
# failure = "0.1.8"
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
explorer700 = { path = "./explorer700" }
