[package]
name = "explorer700"
version = "0.1.0"
authors = ["Volker Kempert <volker.kempert@almedso.de>"]
edition = "2018"
license = "MIT"  # see LICENSE.md


[features]
default = ["unproven"]
# we need this for reading from port expander pcf857x
unproven = []

[target.'cfg(unix)'.dependencies]
sysfs_gpio = "0.6.0"
linux-embedded-hal = "=0.3.0"  # enforce 0.3.0 since 0.3.1 has gpio changes
embedded-graphics = "0.6.2"
i2cdev-bmp180 = "0.1.0"  # part of Explorer 700 shield

ssd1306 = "0.3.1"  # part of Explorer 700 shield
si7021 = "0.2.0"  # external temp and humidity sensor
pcf857x = { version = "0.4.0", features = [ "unproven"] }  # i2c port expander part of Explorer 700 shield
i2cdev = "0.5.0"
i2csensors = "0.1.3"
port-expander = "0.2.1"
shared-bus = "0.2.2"
nix = "0.17.0"  # for getting ip address
bmp085 = "0.1.2"

[dev-dependencies]
clap = "2.33.3"
